# game-dev

./: .gitignore
pong/: .gitignore  Main.hs  pong.cabal
survival/: .gitignore  CHANGELOG.md  README.md  stack.yaml  survival.cabal
survival-c/: .main.c.swp  Makefile  README.md  error.c  error.h  game.c  game.h  main.c  rendering.c  rendering.h  sdl_app
survival/src/: Game.hs  Main.hs  Rendering.hs
