cabal-version:       2.2

name:                survival
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/survival#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable survival
  hs-source-dirs:      src
  main-is:             Main.hs
  
  other-modules:       Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , array
                      , gloss
                      , containers
                      , sdl2
                      , sdl2-image
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
